@@ -58,11 +58,18 @@ sub add_compiler {
 		my ($planner, $from, $to, %extra) = @_;
 		my %args = (%opts, %extra);
 		my $compiler = $self->_make_command($self->_get_compiler(\%args));
-		if (my $profile = $args{profile}) {
-			$profile =~ s/ \A @ /ExtUtils::Builder::Profile::/xms;
-			require_module($profile);
-			$profile->process_compiler($compiler, \%args);
+
+		$args{profiles} = [ delete $args{profile} ] if $args{profile} and not $args{profiles};
+		if (my $profiles = $args{profiles}) {
+			for my $profile (@$profiles) {
+				if (not ref($profile)) {
+					$profile =~ s/ \A @ /ExtUtils::Builder::Profile::/xms;
+					require_module($profile);
+				}
+				$profile->process_compiler($compiler, \%args);
+			}
 		}
+
 		if (my $include_dirs = $args{include_dirs}) {
 			$compiler->add_include_dirs($include_dirs);
 		}
@@ -72,6 +79,7 @@ sub add_compiler {
 		if (my $extra = $args{extra_args}) {
 			$compiler->add_argument(value => $extra);
 		}
+
 		my $node = $compiler->compile($from, $to, %args);
 		$planner->add_node($node);
 	});
@@ -115,11 +123,20 @@ sub add_linker {
 		my ($planner, $from, $to, %extra) = @_;
 		my %args = (%opts, %extra);
 		my $linker = $self->_make_command($self->_get_linker(\%args));
-		if (my $profile = $args{profile}) {
-			$profile =~ s/ \A @ /ExtUtils::Builder::Profile::/xms;
-			require_module($profile);
-			$profile->process_linker($linker, \%args);
+
+		$args{profiles} = [ delete $args{profile} ] if $args{profile} and not $args{profiles};
+		if (my $profiles = $args{profiles}) {
+			for my $profile (@$profiles) {
+				if (ref($profile)) {
+
+				} else {
+					$profile =~ s/ \A @ /ExtUtils::Builder::Profile::/xms;
+					require_module($profile);
+					$profile->process_linker($linker, \%args);
+				}
+			}
 		}
+
 		if (my $library_dirs = $args{library_dirs}) {
 			$linker->add_library_dirs($library_dirs);
 		}
@@ -129,6 +146,7 @@ sub add_linker {
 		if (my $extra_args = $args{extra_args}) {
 			$linker->add_argument(ranking => 85, value => [ @{$extra_args} ]);
 		}
+
 		my $node = $linker->link($from, $to, %args);
 		$planner->add_node($node);
 	});
@@ -186,8 +204,8 @@ sub add_methods {
 
  my $planner = ExtUtils::Builder::Planner->new;
  $planner->load_module('ExtUtils::Builder::AutoDetect::C', '0.001',
-	profile => '@Perl',
-	type    => 'loadable-object',
+	profiles => ['@Perl'],
+	type     => 'loadable-object',
  );
  $planner->compile('foo.c', 'foo.o', include_dirs => ['.']);
  $planner->link([ 'foo.o' ], 'foo.so', libraries => ['foo']);
@@ -242,9 +260,9 @@ A loadable extension. On most platforms this is the same as a dynamic library, b
 
 A Perl configuration to take hints from, must be an C<ExtUtils::Config> compatible object.
 
-=item profile
+=item profiles
 
-A profile to be used when compiling and linking. One profile comes with this distribution: C<'@Perl'>, which sets up the appropriate things to compile/link with C<libperl>.
+A list of profile that can be used when compiling and linking. One profile comes with this distribution: C<'@Perl'>, which sets up the appropriate things to compile/link with C<libperl>.
 
 =item include_dirs
 
