@@ -3,6 +3,7 @@ Revision history for ExtUtils-Builder-Compiler
 {{$NEXT}}
           - Restore module_for_xs delegate
           - Make module work on static perls
+          - Allow for multiple profiles in compilation
 
 0.022     2024-09-13 14:11:23+02:00 Europe/Brussels
           - Fix quiet argument of try_compile_run
